Title align correction

--- a/css/about.css
+++ b/css/about.css
@@ -1,8 +1,6 @@
-h2, h3 {
+h2 {
     width: fit-content;
     margin: 0 auto;
-}
-h2 {
     text-align: center;
     color: black;
     font-size: 2rem;
